...
import org.starfall.multigateway.R
import org.starfall.multigateway.data.model.AuthMethod
import org.starfall.multigateway.data.model.ProviderType
import org.starfall.multigateway.ui.components.RoundedDropdownMenuItem

private fun AuthMethod.legacyDisplayName(): String = when (this) {
    AuthMethod.PLATFORM_DEFAULT -> "Platform Default"
    AuthMethod.NONE, AuthMethod.OTHER -> "None"
    AuthMethod.BEARER_TOKEN, AuthMethod.CUSTOM_HEADER -> "Bearer Token"
    AuthMethod.QUERY_PARAM -> "URL Query"
    AuthMethod.OAUTH -> "OAuth Flow"
}

...
